# f1

./: .env  .gitignore  .graphify_uncached.txt  BUGS.md  CLAUDE.md  Dockerfile  PRD.md  README.md  alembic.ini  docker-compose.yml  patch.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_script.py
.claude/: settings.json  settings.local.json
.obsidian/: graph.json  workspace.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_speed_pit_ratings.py  0003_team_car_perf_circuit_coords_teammate.py  0004_race_weather_forecasts.py  0005_split_dnf_rates.py  0006_game_picks.py
app/: __init__.py  config.py  database.py  main.py  worker.py
app/analytics/: __init__.py  aggregator.py  cache.py  nlp_scenario_parser.py  teammate_comparison.py  what_if.py
app/api/: analytics.py  circuits.py  deps.py  drivers.py  game.py  scenarios.py  simulations.py  ws.py
app/ingestion/: __init__.py  ergast_client.py  fastf1_client.py  safety_car_client.py  tasks.py  transformers.py  weather_client.py
app/models/: __init__.py  circuit.py  driver.py  driver_rating.py  game_pick.py  race_result.py  race_weather_forecast.py  simulation_run.py  team.py
app/schemas/: driver.py  results.py  simulation.py
app/simulation/: __init__.py  performance_model.py  qualifying_simulator.py  race_simulator.py  scoring.py  season_simulator.py  tasks.py  tyre_strategy.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/.obsidian/: graph.json  workspace.json
graphify-out/obsidian/: .__repr__().md  .__repr__()_1.md  .__repr__()_2.md  .__repr__()_3.md  .__repr__()_4.md  .__repr__()_5.md  .__repr__()_6.md  0001_initial_schema.py.md  Aggregated per-driver result for a given simulation run (not raw parquet rows)..md  Analytics Aggregator.md  Architecture Separation of Concerns.md  Backtest Validation (2023 Season).md  Base.md  BaseModel.md  BaseSettings.md  Base_1.md  Bulk-insert race results, skipping already-existing records..md  Celery + Redis Dependency.md  Celery Task Naming Convention.md  Celery Task Queue.md  Circuit.md  (+284 more)
scripts/: fix_2026_ratings.py  run_backtest.py  seed_db.py  seed_podiums.py
tests/: conftest.py
(+414 files in other folders)
